quicklog/tests/failures/struct_missing_serialize.stderr
error[E0599]: the method `buffer_size_required` exists for tuple `(&A,)`, but its trait bounds were not satisfied
  --> tests/failures/struct_missing_serialize.rs:14:5
   |
14 |     info!(s1, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `(&A,)` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `&A: quicklog::serialize::Serialize`
           which is required by `(&A,): quicklog::serialize::Serialize`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `A: quicklog::serialize::Serialize` is not satisfied
  --> tests/failures/struct_missing_serialize.rs:14:5
   |
14 |     info!(s1, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quicklog::serialize::Serialize` is not implemented for `A`
   |
   = help: the following other types implement trait `quicklog::serialize::Serialize`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `&A` to implement `quicklog::serialize::Serialize`
   = note: required for `(&A,)` to implement `SerializeTpl`
note: required by a bound in `_decode_fn`
  --> tests/failures/struct_missing_serialize.rs:14:5
   |
14 |     info!(s1, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_decode_fn`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
